# ResearchAI

./: .gitignore  Main.py  pyproject.toml
Agents/: Client.py  Logging.py  Session.py  Transport.py  Types.py  __init__.py
Codex/: Client.py  Errors.py  Session.py  Transport.py  __init__.py
Examples/: SimpleDataPipeline.py  SimpleEvaluationPipeline.py  SimpleHelloWorld.py
Optimizer/: Orchestrator.py  Tracker.py
Problem/Engine/: __init__.py
Problem/Harness/: DataPipeline.py  EvaluationPipeline.py
