[project]
name = "researchai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["Problem*", "Agents*", "Optimizer*", "Examples*"]
